coreections and enhancement

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -12,13 +12,17 @@
   <div class="container">
     <div class="text">
       PORTFOLIO FORM
+      <span style="font-size: medium;">
+        <p>(upload photos in imagekit.io and copy-url or provide url if you already have)</p>
+      </span>
     </div>
+    
     <form action="/submit" method="post">
       <div class="form-row">
         <div class="input-data">
           <input type="text" name="portfolio_title" required>
           <div class="underline"></div>
-          <label for="portfolio_title">Enter Portfolio Title</label>
+          <label for="portfolio_title">Enter Portfolio Title(will be used in url must be unique)</label>
         </div>
       </div>
       <div class="form-row">
