--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -21,6 +21,12 @@
         <div class="row full-height justify-content-center">
           <div class="col-12 text-center align-self-center py-5">
             <div class="section pb-5 pt-5 pt-sm-2 text-center">
+               <h1 class="ml6">
+               <span class="text-wrapper">
+              <span class="letters" style="letter-spacing: 1rem;">PORTFOLIO-GPT</span>
+              </span>
+              </h1>
+              <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
               <h6 class="mb-0 pb-3">
                 <span>Log In </span><span>Sign Up</span>
               </h6>
@@ -120,6 +126,18 @@
       </div>
     </div>
     <!-- partial -->
-    <script src="./script.js"></script>
+    <script>
+      var textWrapper = document.querySelector('.ml6 .letters');
+textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
+
+anime.timeline({loop: false})
+  .add({
+    targets: '.ml6 .letter',
+    translateY: ["1.1em", 0],
+    translateZ: 0,
+    duration: 750,
+    delay: (el, i) => 50 * i
+  })
+    </script>
   </body>
 </html>
